--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">KakakuHikaku</string>
+    <string name="action_menu1">設定</string>
+    <string name="action_menu2">Menu2</string>
 </resources>
